privateaks/voting-private-public-loadbalancer.yaml
 
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front-external
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: azure-vote-front
